--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 title: Techjoomla
 url: "http://docs.techjoomla.com/"
 baseurl:
-google_analytics_key:
+google_analytics_key: UA-106743603-1
 disqus_shortname:
 newsletter_action:
 
