--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,8 +5,8 @@ site_author: Techjoomla
 site_url: https://docs.techjoomla.com/
 
 # Repository
-repo_name: techjoomla.github.io
-repo_url: https://github.com/techjoomla/techjoomla.github.io
+repo_name: docs.github.io
+repo_url: https://github.com/techjoomla/docs.github.io
 edit_uri: ""
 
 # Copyright
